Working on translation code

--- a/config.json
+++ b/config.json
@@ -1,17 +1,24 @@
-{
-	"SimpleForm":
+[
 	{
-		"name": "text",
-		"place": "coordinates",
-		"male": "boolean",
-		"photo": "file",
-		"age": "number"
-	},
-	"CompleteForm":
-	{
-		"name": "text",
-		"place": "coordinates",
-		"photo": "file",
-		"age": "number"
+		"name": "simpleForm",
+		"fields": [
+			{
+				"name": "name",
+				"type": "text",
+				"required": true
+			},
+			{
+				"name": "age",
+				"type": "number"
+			},
+			{
+				"name": "gender",
+				"type": "choice",
+				"choices": [
+					"male",
+					"female"
+				]
+			}
+		]
 	}
-}
+]
