--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 [
 	{
-		"name": "simpleForm",
+		"name": "simple form",
 		"fields": [
 			{
 				"name": "name",
@@ -18,6 +18,21 @@
 					"male",
 					"female"
 				]
+			}
+		]
+	},
+	{
+		"name": "second form",
+		"fields": [
+			{
+				"name": "name",
+				"type": "text",
+				"required": true
+			},
+			{
+				"name": "link",
+				"type": "foreign-key",
+				"to": "simple form"
 			}
 		]
 	}
