Fixed API support for CoordinateField and MultiSelectField

--- a/config.json
+++ b/config.json
@@ -13,6 +13,14 @@
 				"type": "text"
 			},
 			{
+				"name": "test",
+				"type": "choice",
+				"choices": [
+					"one",
+					"two"
+				]
+			},
+			{
 				"name": "age",
 				"type": "number"
 			},
