Autocomplete added to /web/

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ django-model-utils
 django-multiselectfield
 django-jsonify
 -e hg+https://bitbucket.org/dbinit/django-gmapi#egg=django-gmapi-new
+-e git+https://github.com/yourlabs/django-autocomplete-light#egg=autocomplete_light
