--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ django-bootstrap3
 south
 django-model-utils
 django-multiselectfield
--e hg+https://bitbucket.org/dbinit/django-gmapi#egg=django-gmapi-new
--e git+https://github.com/yourlabs/django-autocomplete-light@v2#egg=autocomplete_light
+hg+https://bitbucket.org/dbinit/django-gmapi#egg=django-gmapi-new
+git+https://github.com/yourlabs/django-autocomplete-light@v2#egg=autocomplete_light
+django-extra-views
