--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ django-multiselectfield
 hg+https://bitbucket.org/dbinit/django-gmapi#egg=django-gmapi-new
 git+https://github.com/yourlabs/django-autocomplete-light@v2#egg=autocomplete_light
 django-extra-views
+sorl-thumbnail
