--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ hg+https://bitbucket.org/dbinit/django-gmapi#egg=django-gmapi-new
 git+https://github.com/yourlabs/django-autocomplete-light@v2#egg=autocomplete_light
 django-extra-views
 sorl-thumbnail
+raven
