Fixes for Fabric scripts

--- a/deploy/vhosts.conf
+++ b/deploy/vhosts.conf
@@ -1,18 +1,18 @@
 LoadModule wsgi_module modules/mod_wsgi.so
-WSGIPythonPath {env.project_root}/kandu:{env.virtualenv_path}/lib/python2.7/site-packages
+WSGIPythonPath {{env.project_root}}/kandu/kandu:{{env.virtualenv_path}}/lib/python2.7/site-packages
 WSGISocketPrefix /var/run/wsgi
 <VirtualHost *:80>
-    ServerName {env.host}
+    ServerName {{env.host}}
 
     ErrorLog  /var/log/httpd/kandu.error.log
     CustomLog /var/log/httpd/kandu.access.log combined
-    WSGIScriptAlias / {env.code_root}/wsgi.py
-    WSGIDaemonProcess {env.host} python-path={env.project_root}:{env.virtualenv_path}/lib/python2.7/site-packages/
-    WSGIProcessGroup {env.host}
+    WSGIScriptAlias / {{env.code_root}}/kandu/wsgi.py
+    WSGIDaemonProcess {{env.host}} python-path={{env.code_root}}:{{env.virtualenv_path}}/lib/python2.7/site-packages/
+    WSGIProcessGroup {{env.host}}
     WSGIPassAuthorization On
-    Alias /static {env.project_root}-static
-    Alias /media {env.project_root}-media
-    <Directory {env.project_root}/kandu>
+    Alias /static {{env.project_root}}/{{env.project_name}}-static
+    Alias /media {{env.project_root}}/{{env.project_name}}-media
+    <Directory {{env.code_root}}/kandu>
         <Files wsgi.py>
             Order deny,allow
             Allow from all
