--- a/deploy/server_config.json
+++ b/deploy/server_config.json
@@ -1,9 +1,9 @@
 {
 	"DATABASE": {
-	    "NAME": "{env.project_name}",
+	    "NAME": "{{env.project_name}}",
 	    "USER": "kandu",
-	    "PASSWORD": "{env.database_password}"
+	    "PASSWORD": "{{env.database_password}}"
 	},
-	"STATIC_ROOT": "{env.project_root}-static",
-	"MEDIA_ROOT": "{env.project_root}-media"
+	"STATIC_ROOT": "{{env.project_root}}/{{env.project_name}}-static",
+	"MEDIA_ROOT": "{{env.project_root}}/{{env.project_name}}-media"
 }
