move_files_to_new_location task added to the script

--- a/deploy/vhosts.conf
+++ b/deploy/vhosts.conf
@@ -1,6 +1,7 @@
 LoadModule wsgi_module modules/mod_wsgi.so
 WSGIPythonPath {{env.project_root}}/kandu/kandu:{{env.virtualenv_path}}/lib/python2.7/site-packages
 WSGISocketPrefix /var/run/wsgi
+NameVirtualHost *:80
 <VirtualHost *:80>
     ServerName {{env.host}}
 
