--- a/deploy/vhosts.conf
+++ b/deploy/vhosts.conf
@@ -20,3 +20,40 @@ NameVirtualHost *:80
         </Files>
      </Directory>
 </VirtualHost>
+
+{% if support_https %}
+<VirtualHost *:443>
+    ServerName {{ env.host }}
+    ErrorLog  /var/log/httpd/kandu.error.log
+    CustomLog /var/log/httpd/kandu.access.log combined
+    WSGIScriptAlias / {{ env.code_root }}/kandu/wsgi.py
+    WSGIProcessGroup {{ env.host }}
+    WSGIPassAuthorization On
+    Alias /static {{env.project_root}}/{{env.project_name}}-static
+    Alias /media {{env.project_root}}/{{env.project_name}}-media
+
+    ErrorLog logs/ssl_error_log
+    TransferLog logs/ssl_access_log
+    LogLevel warn
+    SSLEngine on
+    SSLProtocol all -SSLv2
+    SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM:+LOW
+    SSLCertificateFile /etc/pki/tls/certs/27f9904b885ab1.crt
+    SSLCertificateKeyFile /etc/pki/tls/private/kandu.key
+    SSLCertificateChainFile /etc/pki/tls/certs/gd_bundle-g2-g1.crt
+    <Files ~ "\.(cgi|shtml|phtml|php3?)$">
+            SSLOptions +StdEnvVars
+    </Files>
+    SetEnvIf User-Agent ".*MSIE.*" \
+         nokeepalive ssl-unclean-shutdown \
+         downgrade-1.0 force-response-1.0
+                  <Directory {{ env.code_root }}/kandu>
+                          <Files wsgi.py>
+                                  Order deny,allow
+                                  Allow from all
+                          </Files>
+                   </Directory>
+    ProxyPass /jasperserver http://{{ env.host }}:8080/jasperserver
+    ProxyPassReverse /jasperserver http://{{ env.host }}:8080/jasperserver
+</VirtualHost>
+{% endif %}
